# Volt

./: .editorconfig  .env.example  .gitignore  .nvmrc  .prettierignore  AGENTS.md  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SPRINT_LAUNCH_SUMMARY.md  WEEK1_A11Y_TODO.md  WEEK1_REVISED_A11Y_PLAN.md  cliff.toml  commitlint.config.mjs  eslint.config.js  index.html  package.json  playwright.config.ts  settings.html  vite.config.ts  vitest.config.ts  volt-signing.key.pub
.claude/: settings.json  settings.local.json
.claude/agent-memory/volt-security-auditor/: MEMORY.md  audit_extension_system.md  audit_shell_execution.md
.claude/agents/: volt-cto.md  volt-extension-dev.md  volt-perf.md  volt-rust-expert.md  volt-security-auditor.md  volt-security.md  volt-senior-dev.md  volt-tauri-expert.md  volt-test.md  volt-ux.md
.claude/commands/: volt-debug.md  volt-docs.md  volt-feature.md  volt-plugin.md  volt-tauri-cmd.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/skills/: volt-rust-expert.md  volt-ui-expert.md  web-research-assistant.md
.github/workflows/: auto-tag.yml  changelog.yml  check.yml  e2e.yml  pr-title.yml  release.yml  version-bump.yml
docs/: ACCESSIBILITY_AUDIT.md  ACCESSIBILITY_SETTINGS_PLAN.md  EXTENSION_INTEGRATION.md  FEATURES_GAP_ANALYSIS.md  INTEGRATIONS_UI_SHOWCASE.md  README.md  v1.0.1-SPRINT-PLAN.md
docs/architecture/: ARCHITECTURE.md  FEATURES.md  OAUTH_IMPLEMENTATION.md
docs/build-release/: CICD.md  DISTRIBUTION.md  IMPLEMENTATION_PLAN.md  ROADMAP.md  SIGNING_SETUP.md
docs/changelog/: CHANGELOG.md  UPDATES_2025-01.md
docs/plugins/: API_REFERENCE.md  DEVELOPMENT.md  EXAMPLES.md  EXTENSION_REGISTRY_TEMPLATE.json  NEXTJS_SECURE_API.md  PUBLISHING_GUIDE.md  QUICK_REFERENCE.md  SUMMARY.md  TEMPLATE.md
docs/roadmap/: COMPETITIVE_ANALYSIS.md  PRODUCT_ROADMAP.md  README.md
docs/superpowers/plans/: 2026-04-12-phase2-quality-polish.md  2026-04-13-i18n-internationalization.md  2026-04-13-phase2-completion.md
docs/superpowers/specs/: 2026-04-12-phase2-quality-polish-design.md  2026-04-13-i18n-internationalization-design.md  2026-04-13-web-worker-sandbox-design.md
docs/user-guide/: SHORTCUTS.md
public/: changelog.json
scripts/: generate-changelog.mjs  setup-hooks.mjs  sync-version.mjs
scripts/hooks/: commit-msg  pre-commit
src/: main.tsx  settings.tsx
src-tauri/: ARCHITECTURE.md  Cargo.toml  MODULES.md  README.md  STRUCTURE.md  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/benches/: search_bench.rs
src-tauri/capabilities/: README.md  default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: apps.rs  auth.rs  autostart.rs  clipboard.rs  credentials.rs  extensions.rs  files.rs  games.rs  keyring_store.rs  launcher.rs  logging.rs  mod.rs  oauth.rs  plugins.rs  preview.rs  quicklinks.rs  search.rs  settings.rs  shell.rs  shell_history.rs  snippets.rs  steam.rs  system_monitor.rs  window_management.rs
src-tauri/src/core/: constants.rs  error.rs  mod.rs  traits.rs  types.rs
src-tauri/src/hotkey/: mod.rs
src-tauri/src/indexer/: database.rs  file_history.rs  mod.rs  scanner.rs  search.rs  search_engine.rs  types.rs  watcher.rs  windows_search.rs
src-tauri/src/launcher/: history.rs  mod.rs  process.rs  types.rs
src-tauri/src/plugins/: PLUGIN_GUIDE.md  README.md  api.rs  loader.rs  mod.rs  registry.rs
src-tauri/src/plugins/builtin/: mod.rs
src-tauri/src/plugins/builtin/clipboard_manager/: mod.rs  plugin.rs
src-tauri/src/plugins/builtin/game_scanner/: amazon.rs  battlenet.rs  ea.rs  epic.rs  gog.rs  mod.rs  plugin.rs  riot.rs  rockstar.rs  steam.rs  types.rs  ubisoft.rs  xbox.rs
src-tauri/src/plugins/builtin/system_monitor/: mod.rs  plugin.rs
src-tauri/src/search/: mod.rs
src-tauri/src/utils/: extension_state_sig.rs  game_icon.rs  hash.rs  icon.rs  launch_validation.rs  matching.rs  mod.rs  path.rs  shell_apps.rs
src-tauri/src/window/: mod.rs
src/app/: App.css  App.tsx  performSearch.test.ts  utils.ts  windows.ts
src/app/components/: ResultContextMenu.tsx  ViewRouter.tsx
src/app/hooks/: useAppLifecycle.ts  useGlobalHotkey.ts  useResultActions.ts  useSearchPipeline.ts
src/features/applications/: index.ts
src/i18n/: index.ts
src/stores/: appStore.ts  searchStore.ts  uiStore.ts
src/styles/: accessibility.css  animations.css  global.css  variables.css
src/test/: i18n-parity.test.ts  setup.ts
tests/e2e/: accessibility.spec.ts  fixtures.ts  keyboard.spec.ts  search.spec.ts  smoke.spec.ts
winget/: README.md
(+224 files in other folders)
